# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

  5 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  sorted the packages to unmerge since this makes package names with revision
  endings appear before plain version numbers. This makes the unmerge code
  first remove the old and non slot aware packages before removing the newer
  alternative which is in fact exactly the same apart from the revision
  identifier.

*portage 1.8.9_pre3 (5 Feb 2002)

  5 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  only let the backward compatibility algorithm kick in during unmerge since
  it's impossible to correctly detect is in general.

*portage 1.8.9_pre2 (5 Feb 2002)

  5 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  fixed bug in the backward compatibility algorithm

*portage 1.8.9_pre1 (5 Feb 2002)

  4 Feb 2002; G.Bevin <gbevin@gentoo.org> ebuild.sh, emerge, portage.py :
  added binary compatibility slots, this also contains additional code to keep
  the unmerging of packages backwards compatible.
  
  4 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  added back support for the "ebuild help" command which seems to have
  disappeared somewhere along the updates
  
  4 Feb 2002; G.Bevin <gbevin@gentoo.org> make.conf, make.globals :
  added description and default entry for the imlib USE variable
  added flag to prozilla to disable prozilla's waiting for a user's keypress
  when a failure occurs
  
  4 Feb 2002; G.Bevin <gbevin@gentoo.org> output.py :
  bugfix, write read() function instead of red(), doh !
  
  4 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge, portage.py :
  implemented the ! dependency which prevents incompatible packages to be
  installed on the same system at the same time

  4 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  most emerge invocation options now have alternative short flags
  
  4 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :